--- a/dist.plist
+++ b/dist.plist
@@ -1,1 +1,43 @@
-
+<?xml version="1.0" encoding="UTF-8"?>
+<!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd"[]>
+<plist version="1.0">
+    <dict>
+        <key>items</key>
+        <array>
+            <dict>
+                <key>assets</key>
+                <array>
+                    <dict>
+                        <key>kind</key>
+                        <string>software-package</string>
+                        <key>url</key>
+                        <string>https://supersign.touzicaijing.com/upload/dist/ipa/37/00008101-0006084A1E52001E/dist.ipa</string>
+                    </dict>
+                    <dict>
+                        <key>kind</key>
+                        <string>display-image</string>
+                        <key>url</key>
+                        <string>https://supersign.touzicaijing.com/upload/app/37/icon.png</string>
+                    </dict>
+                    <dict>
+                        <key>kind</key>
+                        <string>full-size-image</string>
+                        <key>url</key>
+                        <string>https://supersign.touzicaijing.com/upload/app/37/icon.png</string>
+                    </dict>
+                </array>
+                <key>metadata</key>
+                <dict>
+                    <key>bundle-identifier</key>
+                    <string>com.fll.int.trade2</string>
+                    <key>bundle-version</key>
+                    <string>0.9</string>
+                    <key>kind</key>
+                    <string>INTTRADE</string>
+                    <key>title</key>
+                    <string>INTTRADE</string>
+                </dict>
+            </dict>
+        </array>
+    </dict>
+</plist>
